feat: storybook testing (#65)
* chore: in progress

* feat: vitest supported for ui component

* feat: storybook testing added and removed vitest from ui module

* fix: github action test-storybook

* chore: install pkg test-storybook

* chore: removed playwright installation from test-storybook

--- a/packages/ui/stories/Introduction.mdx
+++ b/packages/ui/stories/Introduction.mdx
@@ -13,4 +13,4 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
 
 ## Components
 
-- [Counter](/story/components-counter--default)
+- [Header](/story/components-header--default)
