--- a/packages/ui/stories/Introduction.mdx
+++ b/packages/ui/stories/Introduction.mdx
@@ -13,4 +13,4 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
 
 ## Components
 
-- [Header](/story/components-header--default)
+- [Templ](/story/components-templ--default)
